packages/compiler/tests/fixtures/invalid/async-function.svelte
<script>
  async function loadData() {
    const res = await fetch('/api/data')
  }
</script>
<text>Loading...</text>
